# nornikel-scientific-tangle

./: .env.example  .gitignore  README.md  docker-compose.yml  models.example.json  pyproject.toml
scripts/: ingest_files.py  ingest_scans.py  make_deck.py  run_embed.py  run_extract.py  run_ingest.py  run_load.py  scan_keyword.py
src/sciknot/: api.py  config.py  dataops.py  llm.py  localllm.py
src/sciknot/extract/: extractor.py
src/sciknot/graph/: loader.py
src/sciknot/ingest/: parsers.py  pipeline.py
src/sciknot/search/: hybrid.py
src/sciknot/web/: app.js  index.html  style.css
