[project]
name = "sciknot"
version = "0.1.0"
description = "Научный клубок — карта знаний R&D для горно-металлургической отрасли (GraphRAG)"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "neo4j>=5.25",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "tqdm>=4.66",
    "httpx[socks]>=0.28.1",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",
    "xlrd>=2.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sciknot"]
